# swift-book-pdf

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  THIRD-PARTY-NOTICES.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-font-bug-report.yaml
.github/workflows/: main_branch_check.yml  python.yml  release.yml
src/swift_book_pdf/: book.py  cli.py  cli_epub.py  cli_pdf.py  config.py  contents.py  doc.py  grammar_summary.py  latex.py  latex_helpers.py  log.py  notices.py  pdf.py  preamble.py  styles.py  toc.py  typography.py
src/swift_book_pdf/assets/epub_reference/: epub.css
src/swift_book_pdf/epub/: __init__.py  builder.py  constants.py  helpers.py  package.py  render.py
swift_book_pdf/: blocks.py  book.py  chapters.py  cli.py  cli_epub.py  cli_pdf.py  colors.py  config.py  contents.py  doc.py  files.py  fonts.py  grammar_summary.py  latex.py  latex_helpers.py  log.py  markdown_helpers.py  notices.py  pdf.py  preamble.py  schema.py  styles.py  toc.py  typography.py
swift_book_pdf/assets/epub_reference/: epub.css  pygments.css
swift_book_pdf/epub/: builder.py  constants.py  package.py  render.py
tests/: test_cli.py  test_code_blocks.py  test_contents.py  test_epub_helpers.py  test_epub_package.py  test_epub_render.py  test_grammar_summary.py  test_latex_helpers.py  test_notices.py
