[project]
name = "swift-book-pdf"
version = "2.0.1"
description = "A tool to generate a PDF version of The Swift Programming Language book."
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "Evangelos Kassos", email = "github@evangeloskassos.com" }]
keywords = ["swift", "book", "pdf"]
requires-python = ">=3.10"
dependencies = [
    "pygments>=2.19.2,<3.0.0",
    "tqdm>=4.67.3,<5.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "click>=8.3.1,<9.0.0",
    "latexminted>=0.6.0,<0.7.0; python_version < '3.14'",
    "latexminted>=0.7.1,<0.8.0; python_version >= '3.14'",
]

[project.urls]
repository = "https://github.com/ekassos/swift-book-pdf.git"
issues = "https://github.com/ekassos/swift-book-pdf/issues"
changelog = "https://github.com/ekassos/swift-book-pdf/blob/main/CHANGELOG.md"
documentation = "https://github.com/ekassos/swift-book-pdf/wiki"
releasenotes = "https://github.com/ekassos/swift-book-pdf/releases"

[project.scripts]
swift_book_pdf = "swift_book_pdf.cli:run"
swift-book-pdf = "swift_book_pdf.cli:run"

[project.entry-points."pygments.styles"]
swift_book_style = "swift_book_pdf.styles:CustomSwiftBookStyle"
swift_book_dark_style = "swift_book_pdf.styles:CustomSwiftBookDarkStyle"

[dependency-groups]
dev = [
    "filelock>=3.25.2,<4.0.0",
    "pre-commit>=4.5.1,<5.0.0",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ERA", # eradicate
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-pathlib
    "S",   # flake8-string-format
    "I",   # isort
    "C90", # mccabe
]
