[project]
name = "swift-book-pdf"
version = "2.4.1"
description = "Generate polished PDF and EPUB editions of The Swift Programming Language book."
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "Evangelos Kassos", email = "github@evangeloskassos.com" }]
keywords = ["swift", "book", "pdf", "epub"]
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.1.1,<13.0.0",
    "pygments>=2.20.0,<3.0.0",
    "tqdm>=4.67.3,<5.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "click>=8.3.1,<9.0.0",
    "latexminted>=0.6.0,<0.7.0; python_version < '3.14'",
    "latexminted>=0.7.1,<0.8.0; python_version >= '3.14'",
]

[project.urls]
repository = "https://github.com/ekassos/swift-book-pdf.git"
issues = "https://github.com/ekassos/swift-book-pdf/issues"
changelog = "https://github.com/ekassos/swift-book-pdf/blob/main/CHANGELOG.md"
documentation = "https://github.com/ekassos/swift-book-pdf/wiki"
releasenotes = "https://github.com/ekassos/swift-book-pdf/releases"

[project.scripts]
swift_book_pdf = "swift_book_pdf.cli_pdf:pdf"
swift-book-pdf = "swift_book_pdf.cli_pdf:pdf"
swift-book-epub = "swift_book_pdf.cli_epub:epub"
swift_book_epub = "swift_book_pdf.cli_epub:epub"

[project.entry-points."pygments.styles"]
swift_book_style = "swift_book_pdf.styles:CustomSwiftBookStyle"
swift_book_dark_style = "swift_book_pdf.styles:CustomSwiftBookDarkStyle"

[dependency-groups]
dev = [
    "filelock>=3.25.2,<4.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pre-commit>=4.5.1,<5.0.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "ERA",      # eradicate
    "ANN",      # flake8-annotations
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "PIE",      # flake8-pie
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TC",       # flake8-type-checking
    "ARG",      # flake8-unused-arguments
    "PTH",      # flake8-pathlib
    "S",        # flake8-string-format
    "I",        # isort
    "C90",      # mccabe
    "N",        # pep8-naming
    "PERF",     # perflint
    "E",        # pycodestyle
    "W",        # pycodestyle
    "F",        # pyflakes
    "PL",       # pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # ruff
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
strict_config = true
strict_markers = true
testpaths = ["tests"]
